fix missing color grey

--- a/assets/styles/partials/_config.scss
+++ b/assets/styles/partials/_config.scss
@@ -23,6 +23,7 @@ $color-alpha: #98DAEE;
 $color-light: #ffffff;
 $color-dark: #111111;
 $color-blue: #1f3a8c;
+$color-grey: #555555;
 $color-orange: #ff6600;
 $color-yellow: #ffd22d;
 $color-light-alpha: rgba(255,255,255,0.8);
